--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "cashify-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,19 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/provider": "^2.4.2",
+    "@chakra-ui/icon": "^3.2.0",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@reduxjs/toolkit": "^2.2.4",
-    "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
-    "framer-motion": "^11.2.4",
-    "prop-types": "^15.8.1",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.3",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "framer-motion": "^11.2.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "react-helmet": "^6.1.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -32,7 +38,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "react-router-dom": "^6.23.1",
-    "vite": "^5.2.11"
+    "vite": "^5.2.0"
   }
 }
